--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,10 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '0 9 * * *'
-
+  
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+    
 jobs:
   build:
 
