--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Push changes
         uses:  ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.MY_GIT_TOKEN }}
+          github_token: ${{ secrets.BING_WALLPAPER }}
           branch: main
